1. 增加号码商费率 2. 退单操作

--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -29,6 +29,14 @@
                 <input type="radio" name="status" value="2" title="已关闭" >
             </div>
         </div>
+
+    <div class="layui-form-item">
+        <label class="layui-form-label">配置: </label>
+        <div class="layui-input-inline">
+            <textarea type="text" name="config"  placeholder="" autocomplete="off"  id="name" class="layui-input"></textarea> 
+        </div>
+    </div>
+
       <div class="layui-form-item">
         <div class="layui-input-block">
           <button class="layui-btn" lay-submit lay-filter="info">立即提交</button>
