--- a/Application/Admin/View/PoolProvider/edit.html
+++ b/Application/Admin/View/PoolProvider/edit.html
@@ -31,6 +31,12 @@
         </div>
     </div>
      
+    <div class="layui-form-item">
+        <label class="layui-form-label">配置: </label>
+        <div class="layui-input-inline">
+            <textarea type="text" name="config"  placeholder="" autocomplete="off"  id="name" class="layui-input"><{$info['config']}></textarea> 
+        </div>
+    </div>
 
       <div class="layui-form-item">
         <div class="layui-input-block">
