屏蔽模板管理

--- a/Application/Admin/View/Index/left-nav.html
+++ b/Application/Admin/View/Index/left-nav.html
@@ -37,8 +37,8 @@
                       <li><a href="<{:U('Admin/Auth/nodes')}>" class="J_menuItem">
                           <i class="fa fa-vcard "></i> 手动订单系统</a></li>
                         <!--<li><a href="/admin_Template.html" class="J_menuItem">-->
-                        <li><a href="<{:U('Admin/Template/Index')}>" class="J_menuItem">
-                          <i class="fa fa-vcard "></i> 模板管理</a></li>
+                        <!-- <li><a href="<{:U('Admin/Template/Index')}>" class="J_menuItem">
+                          <i class="fa fa-vcard "></i> 模板管理</a></li> -->
                        <!--<li><a href="/admin_User_agentCateList.html" class="J_menuItem">-->
                        <li><a href="<{:U('Admin/User/agentCateList')}>" class="J_menuItem">
                           <i class="fa fa-vcard "></i> 用户分类管理</a></li>
