--- a/Application/Admin/View/PoolProvider/order.html
+++ b/Application/Admin/View/PoolProvider/order.html
@@ -91,7 +91,7 @@
                                     <td><{$v.pool_order_id}></td>
                                     <td><{$v.phone}></td>
                                     <td><{$v.money}></td>
-                                    <td><{$sp_list[$v['sp']]}></td>
+                                    <td><{$sp_list[$v['channel']]}></td>
                                     <td><{$v.pay_name}></td>
                                     <td><{$v.pay_applydate|date='Y-m-d H:i:s',###}></td>
                                     <td><{$v.pay_successdate|date='Y-m-d H:i:s',###}></td>
