--- a/Application/Admin/View/PoolProviderOrder/index.html
+++ b/Application/Admin/View/PoolProviderOrder/index.html
@@ -112,7 +112,7 @@
                                     <td><{$v.pid}></td>
                                     <td><{$v.phone}></td>
                                     <td><{$v.money|format_money}></td>
-                                    <td><{$sp_list[$v['sp']]}></td>
+                                    <td><{$sp_list[$v['channel']]}></td>
                                     <td><{$v.pay_name}></td>
                                     <td><{$v.pay_applydate|date='Y-m-d H:i:s',###}></td>
                                     <td><{$v.pay_successdate|date='Y-m-d H:i:s',###}></td>
