--- a/Application/Admin/View/PoolProvider/index.html
+++ b/Application/Admin/View/PoolProvider/index.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     <div class="col-sm-2 pull-right">
                         <a href="javascript:;" class="layui-btn layui-btn-small"
-                           onclick="add('添加号码商','<{:U('PoolProvider/add')}>',540,440)">添加号码商</a>
+                           onclick="add('添加号码商','<{:U('PoolProvider/add')}>',500,540)">添加号码商</a>
                     </div>
                 </div>
             </div>
@@ -77,6 +77,7 @@
                                 <a onclick="reset('<{$v[id]}>')" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>重置密钥</a>
                                 <a onclick="x_admin_show('余额加钱', '<{:U('PoolProviderMoney/AddProviderBalance',['id'=>$v[id]])}>',540,440)" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>加钱</a>
                                 <a href="<{:U('PoolProvider/order',['id'=>$v[id]])}>" class="layui-btn layui-btn-mini layui-btn-success">交易明细</a>
+                                <a onclick="rate('费率设置','<{:U('PoolProvider/rate',['id'=>$v[id]])}>',380,480)" class="layui-btn layui-btn-success layui-btn-mini"><i class="layui-icon">&#xe640;</i>费率</a>
                             </if>
                                 <a onclick="edit('编辑号码商','<{:U('PoolProvider/edit',['id'=>$v[id]])}>',540,440)" class="layui-btn layui-btn-mini layui-btn-normal"><i class="layui-icon">&#xe642;</i>编辑</a>
                                 <a onclick="del(this,'<{$v[id]}>')" class="layui-btn layui-btn-danger layui-btn-mini"><i class="layui-icon">&#xe640;</i>删除</a>
@@ -106,6 +107,9 @@
     }
 
     function edit(title,url,w,h) {
+        x_admin_show(title,url,w,h);
+    }
+    function rate(title,url,w,h) {
         x_admin_show(title,url,w,h);
     }
 
