金额格式化

--- a/Application/Admin/View/PoolProvider/add.html
+++ b/Application/Admin/View/PoolProvider/add.html
@@ -18,7 +18,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label">登录密码：</label>
         <div class="layui-input-inline">
-          <input type="text" name="password" lay-verify="required" placeholder="请输入初始密码" autocomplete="off"  id="name" class="layui-input">
+          <input type="text" name="password" value="123456" lay-verify="required" placeholder="请输入初始密码" autocomplete="off"  id="name" class="layui-input">
         </div>
       </div>
       <div class="layui-form-item">
@@ -38,7 +38,6 @@
             <div class="layui-col-md12">  
                 <input type="radio" name="status" value="1" title="已认证" checked>
                 <input type="radio" name="status" value="0" title="未认证" >
-                <input type="radio" name="status" value="2" title="已关闭" >
             </div>
         </div>
 
