--- a/Application/Admin/View/PoolProvider/order.html
+++ b/Application/Admin/View/PoolProvider/order.html
@@ -90,7 +90,7 @@
                                     <td><{$v.trade_id}></td>
                                     <td><{$v.pool_order_id}></td>
                                     <td><{$v.phone}></td>
-                                    <td><{$v.money}></td>
+                                    <td><{$v.money|format_money}></td>
                                     <td><{$sp_list[$v['channel']]}></td>
                                     <td><{$v.pay_name}></td>
                                     <td><{$v.pay_applydate|date='Y-m-d H:i:s',###}></td>
