--- a/Application/Admin/View/PoolProviderMoney/AddProviderBalance.html
+++ b/Application/Admin/View/PoolProviderMoney/AddProviderBalance.html
@@ -4,16 +4,16 @@
         <form class="layui-form" id="groupForm" method="post" autocomplete="off" action="">
 
             <div class="layui-form-item">
-                <label class="layui-form-label">增加金额(分)：</label>
-                <div class="layui-input-inline">
-                    <input type="text" name="money" lay-verify="required" placeholder="请输入正整数" autocomplete="off"  id="money" class="layui-input">
+                <label class="layui-form-label">金额(分)：</label>
+                <div class="layui-input-inline" style="width:250px">
+                    <input type="text" name="money" lay-verify="required" placeholder="请输入金额（增加为正数，减少为负数）" autocomplete="off"  id="money" class="layui-input">
                     <input type="hidden" name="id" value="<{$id}>">
                 </div>
             </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">原因：</label>
-                <div class="layui-input-inline">
+                <div class="layui-input-inline" style="width:250px">
                     <input type="text" name="remark" lay-verify="required" placeholder="请输入原因" autocomplete="off"  id="remark" class="layui-input">
                 </div>
             </div>
