--- a/Application/Pool/View/Account/addLog.html
+++ b/Application/Pool/View/Account/addLog.html
@@ -3,19 +3,19 @@
     <div class="col-sm-12">
       <div class="ibox float-e-margins">
         <div class="ibox-title">
-          <h5>加款记录</h5>
+          <h5><{$text}>记录</h5>
         </div>
         <div class="ibox-content"><br>
                <table class="layui-table" lay-skin="line">
                    <thead>
                    <tr>
-                       <th>加款编号</th>
-                       <th>加款前金额</th>
-                       <th>加款金额</th>
-                       <th>加款后金额</th>
-                       <th>加款员ID</th>
-                       <th>加款备注</th>
-                       <th>加款时间</th>
+                       <th><{$text}>编号</th>
+                       <th><{$text}>前金额</th>
+                       <th><{$text}>金额</th>
+                       <th><{$text}>后金额</th>
+                       <th><{$text}>员ID</th>
+                       <th><{$text}>备注</th>
+                       <th><{$text}>时间</th>
                    </tr>
                    </thead>
                    <tbody>
