号码池处理

--- a/Application/Admin/View/Index/main.html
+++ b/Application/Admin/View/Index/main.html
@@ -101,7 +101,7 @@
           <h5><{$stat.doing}></h5>
         </div>
         <div class="ibox-content" style="padding-top:0;height: 67px">
-          <h1 class="no-margins">当前充值中订单量</h1>
+          <h1 class="no-margins">当前充值中订单量 <a href="<{:U('PoolPhone/index',['status'=>1])}>">详情</a></h1>
           <i class="iconfont icon-qianbao" style="color: #edf7fe;"></i>
         </div>
       </div>
@@ -113,7 +113,7 @@
           <h5><{$stat.waiting}></h5>
         </div>
         <div class="ibox-content" style="padding-top:0;height: 67px">
-          <h1 class="no-margins">当前等待充值订单量</h1>
+          <h1 class="no-margins">当前等待充值订单量 <a href="<{:U('PoolPhone/index',['status'=>0])}>">详情</a></h1>
           <i class="iconfont icon-shourusel" style="color: #fff6f0;"></i>
         </div>
       </div>
