--- a/Application/Admin/View/PoolProviderOrder/info.html
+++ b/Application/Admin/View/PoolProviderOrder/info.html
@@ -17,6 +17,7 @@
         <table class="layui-table">
             <tr><td width="30%">平台订单号：</td><td><strong class="text-success"><{$info.order_id}></strong></td></tr>
             <tr><td>商户订单号：</td><td><strong class="text-success"><{$info.pool_order_id}></strong></td></tr>
+            <tr><td>号码商订单号：</td><td><strong class="text-success"><{$info.out_trade_id}></strong></td></tr>
             <tr><td>流水单号：</td><td><strong class="text-success"><{$info.trade_id}></strong></td></tr>
             <tr><td>手机号：</td><td><{$info.phone}> （<{$sp_list[$info['channel']]}>）</td></tr>
             <tr><td>交易通道：</td><td><{$info.pay_name}></td></tr>
