--- a/Application/Pool/View/Account/addLog.html
+++ b/Application/Pool/View/Account/addLog.html
@@ -6,6 +6,24 @@
           <h5><{$text}>记录</h5>
         </div>
         <div class="ibox-content"><br>
+            <form class="layui-form" action="" method="get" autocomplete="off" id="sform">
+                <input type="hidden" name="p" value="1">
+                <div class="layui-form-item">
+                <div class="layui-inline">
+                    <div class="layui-input-inline" style="width:300px">
+                    <input type="text" class="layui-input" name="datetime" id="datetime"
+                            placeholder="创建起始时间" value="<{$param.datetime}>">
+                    </div>
+                  
+      
+                    <div class="layui-input-inline">
+                        <button type="submit" class="layui-btn"><span
+                                class="glyphicon glyphicon-search"></span> 搜索
+                        </button>
+                     </div>
+                </div>
+                </div>
+              </form>
                <table class="layui-table" lay-skin="line">
                    <thead>
                    <tr>
@@ -23,7 +41,7 @@
                    <tr>
                        <td><{$vo.id}></td>
                        <td><{$vo.ymoney|format_money}></td>
-                       <td>+ <{$vo.money|format_money}></td>
+                       <td><{$vo.money|format_money}></td>
                        <td><{$vo.gmoney|format_money}></td>
                        <td><{$vo.uid}></td>
                        <td><{$vo.contentstr}></td>
@@ -53,6 +71,20 @@
 <script>
     $('#pageList').change(function(){
         $('#pageForm').submit();
+    });
+    layui.use(['laydate', 'laypage', 'layer', 'table', 'form'], function() {
+        var laydate = layui.laydate //日期
+            , laypage = layui.laypage //分页
+            ,layer = layui.layer //弹层
+            ,form = layui.form //表单
+            , table = layui.table; //表格
+        //日期时间范围
+        laydate.render({
+            elem: '#datetime'
+            , type: 'datetime'
+            ,theme: 'molv'
+            , range: '|'
+        });
     });
 </script>
 </body>
