--- a/Application/Admin/View/PoolProvider/addMoneyLog.html
+++ b/Application/Admin/View/PoolProvider/addMoneyLog.html
@@ -15,6 +15,11 @@
                                  class="layui-input" value="<{$param.pid}>">
                                  <input type="hidden" name="status" value="<{$param.status}>" />
                         </div>
+
+                        <div class="layui-input-inline" style="width:300px">
+                        <input type="text" class="layui-input" name="datetime" id="datetime"
+                                placeholder="创建起始时间" value="<{$param.datetime}>">
+                        </div>
                       
           
                         <div class="layui-input-inline">
@@ -44,7 +49,7 @@
                        <td><{$vo.id}></td>
                        <td><{$vo.pid}></td>
                        <td><{$vo.ymoney|format_money}></td>
-                       <td>+ <{$vo.money|format_money}></td>
+                       <td><{$vo.money|format_money}></td>
                        <td><{$vo.gmoney|format_money}></td>
                        <td><{$vo.uid}></td>
                        <td><{$vo.contentstr}></td>
@@ -74,6 +79,21 @@
 <script>
     $('#pageList').change(function(){
         $('#pageForm').submit();
+    });
+
+    layui.use(['laydate', 'laypage', 'layer', 'table', 'form'], function() {
+        var laydate = layui.laydate //日期
+            , laypage = layui.laypage //分页
+            ,layer = layui.layer //弹层
+            ,form = layui.form //表单
+            , table = layui.table; //表格
+        //日期时间范围
+        laydate.render({
+            elem: '#datetime'
+            , type: 'datetime'
+            ,theme: 'molv'
+            , range: '|'
+        });
     });
 </script>
 </body>
